<resources>
    <string name="app_name" translatable="false">Elsanabary Electronics</string>
    <string name="enter" translatable="true">Enter</string>
    <string name="login" translatable="false">LogIn</string>
    <string name="signup" translatable="false">SignUp</string>
    <string name="todo">Todo</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="our_stores">Our Stores</string>
    <string name="stores">دمياط شارع الشرباصي بجوار صيدلية الشرباصي امام رزق للبلاستيك</string>
    <string name="telephone">Telephone</string>
    <string name="_057_2250640">057 2250640</string>
    <string name="_01007372517">01007372517</string>
    <string name="_01033201201">01033201201</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home__page">Home_Page</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Categories</string>
    <string name="tab_text_3">Buy</string>
    <string name="tab_text_4">Info</string>
    <string name="tab_text_5">Massege</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_holder_">Holder_Activity</string>
    <string name="todo1">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>