<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/mainColor"
    >


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="414dp"
        android:contentDescription="@string/todo1"
        app:srcCompat="@drawable/logo2"
        android:layout_marginTop="-33dp"
        />

    <Button
        android:id="@+id/Enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:onClick="EnterBtn"
        style="@style/btn_style"
        />
    <Button
        android:id="@+id/LogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="Login_Btn"
        style="@style/btn_style"
        />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SignUp"
        style="@style/btn_style"
        android:onClick="Sign_Up_"
        />

</LinearLayout>